package com.uniworld.uniworld_backend;
import jakarta.persistence.*;
import java.util.List;
import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.EqualsAndHashCode;
import lombok.NoArgsConstructor;
import lombok.ToString;


@Entity
@Data
@NoArgsConstructor
@AllArgsConstructor
public class Song {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long songID;
    
    private String title;

        @ManyToOne(fetch = FetchType.LAZY)
        @JoinColumn(name = "album_id", nullable = false)
        @ToString.Exclude
        @EqualsAndHashCode.Exclude
        private Album album;

        @ManyToMany(fetch = FetchType.EAGER)
        @JoinTable(
            name = "song_artists",
            joinColumns = @JoinColumn(name = "song_id"),
            inverseJoinColumns = @JoinColumn(name = "artist_id")
        )
        @ToString.Exclude
        @EqualsAndHashCode.Exclude
        private List<Artist> artists;

    private String genre;
    private String keyScale;
    private int tempo; // Tempo in BPM
    private int duration; // Duration in seconds
    private String audioFile;

        @ManyToMany(mappedBy = "songs")
        @ToString.Exclude
        @EqualsAndHashCode.Exclude
        private List<Playlist> playlists;

        @OneToMany(mappedBy = "currentSong")
        @ToString.Exclude
        @EqualsAndHashCode.Exclude
        private List<User> listeners;

    // Constructors, getters, and setters can be generated by Lombok annotations
    }
